i3: enable resize mode

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -119,7 +119,7 @@ mode "resize" {
     bindsym Escape mode "default"
 }
 
-#bindsym $win+Control+r mode "resize"
+bindsym $win+Control+r mode "resize"
 
 # }}}
 
